Basic recreation of the ChatGPT homepage

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Navigation bar -->
     <nav>
         <div class="bar">
-            <img class="icons" src="images/openai_logo.png">
+            <img class="icons" src="Images/openai_logo.png">
             <div class="bar_text">
                 <p>Research</p>
                 <p>Product</p>
                 <p>Safety</p>
                 <p>Company</p>
             </div>
-            <img class="icons" id="search" src="images/search_icon.png">
+            <img class="icons" id="search" src="Images/search_icon.png">
         </div>
     </nav>
 
